Fix incorrect wrap behavior of <pre> in Safari 14
Closes #2

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -172,6 +172,7 @@ pre {
   // border: 1px solid $grey-color-light;
   // border-radius: 3px;
   white-space: pre;
+  word-wrap: normal;   /* Fix Safari 14 bug */
 
   > code {
     border: 0;
